<resources>
    <string name="app_name">E-Fresh Dining</string>
    <string name="action_settings">Settings</string>

    <string name="button_order">Order Online</string>
    <string name="button_contact">Contact Us</string>
    <string name="button_submit">Submit</string>
    <string name="button_submitOrder">Submit Order</string>

    <string name="textView_description">Effiicently Fresh</string>

    <string name="textView_menu">Menu</string>
    <string name="textView_pork_tenderloin">Pork Tenderloin</string>
    <string name="textView_tenderloinDes">A very thinly sliced piece of pork made to perfection.</string>
    <string name="textView_roastbeef">Roast Beef</string>
    <string name="textView_roastbeefDes">A hearty piece of roast beef on a sandwich or served by itself with vegetables.</string>
    <string name="textView_salmon">Salmon</string>
    <string name="textView_salmonDes">Raw or cooked and garnished with zucchini and tomatoes.</string>
    <string name="textView_icecream">Ice Cream</string>
    <string name="textView_icecreamDes">Freshly made strawberry ice cream with cut strawberries on top.</string>
    <string name="textView_sushi">Sushi</string>
    <string name="textView_sushiDes">Freshly made sushi with your choice of fish rolled with vegetables and rice.</string>
    <string name="textView_fettuccine">Fettuccine</string>
    <string name="textView_tacos">Tacos</string>
    <string name="textView_lasagna">Lasagna</string>
    <string name="textView_burger">Burger and Fries</string>
    <string name="textView_salad">Salad</string>
    <string name="textView_cake">Cake</string>
    <string name="textView_wrap">Wrap</string>
    <string name="textView_pizza">Pizza</string>
    <string name="textView_chicken">Chicken</string>
    <string name="textView_oysters">Oysters</string>
    <string name="textView_chinese">Chinese</string>

    <string name="CheckBox_add">Add to cart</string>

    <string name="textView_contact">Contact Us</string>
    <string name="textView_phone">For any questions or concerns, you may also reach us at: 1-800-EFresh</string>
    <string name="textView_email">Please leave your email and your questions below.</string>
    <string name="card1foodTitle">Salmon with mixed grilled vegetables</string>
    <string name="card1CalText">Calories:     495</string>
    <string name="card1PriceText">Price Per Serving:    $8.99</string>
    <string name="entreeText">Entrées</string>
    <string name="card2foodTitle">Fresh Seaweed wrapped Sushi</string>
    <string name="card2CalText">Calories:     471</string>
    <string name="card3CalText">Calories:     420</string>
    <string name="card4CalText">Calories:     350</string>
    <string name="card5CalText">Calories:     435</string>
    <string name="card6CalText">Calories:     273</string>
    <string name="card7CalText">Calories:     350</string>
    <string name="card8CalText">Calories:     320</string>
    <string name="card9CalText">Calories:     680</string>
    <string name="card10CalText">Calories:    490</string>
    <string name="card3foodTitle">Grilled Chicken Fiesta Tacos </string>
    <string name="card4foodTitle">Vegetable Pizza with a Crisp Cauliflower Crust </string>
    <string name="card5foodTitle">Grilled Pepper Steak, grilled with fresh bell peppers </string>
    <string name="card6foodTitle">Sesame Lemon Grilled Chicken </string>
    <string name="card7foodTitle">Grilled Salmon with Lemon-Pepper Lentils </string>
    <string name="card8foodTitle">Fresh Caught Oysters </string>
    <string name="card9foodTitle">Chicken Parmesan with Tomato Basil Pasta </string>
    <string name="card10foodTitle">Turkey Meatball Spaghetti with Spaghetti Squash Noodles</string>
    <string name="sideText">Side Items</string>
    <string name="card11CalText">Calories:    140</string>
    <string name="card12CalText">Calories:    220</string>
    <string name="card13CalText">Calories:    135</string>
    <string name="card14CalText">Calories:    110</string>
    <string name="card15CalText">Calories:    180</string>
    <string name="card16CalText">Calories:    150</string>
    <string name="card17CalText">Calories:    350</string>
    <string name="card18CalText">Calories:    210</string>
    <string name="card11foodTitle">Fresh Garden Salad </string>
    <string name="card12foodTitle">Cheesy Cauliflower Rice </string>
    <string name="card13foodTitle">Caesar Salad</string>
    <string name="card14foodTitle">Steamed Vegetables</string>
    <string name="card15foodTitle">Baked Sweet Potatoes Served with Butter</string>
    <string name="sweetText">Sweet Treats</string>
    <string name="card16foodTitle">Fruit Yogurt Parfait</string>
    <string name="card17foodTitle">Mini Pumpkin Pie topped with  Sugar Free Whipped Cream</string>
    <string name="card18foodTitle">Blueberry Coconut Ice Cream (Vegan)</string>
    <string name="card2PriceText">Price Per Serving:    $2.49</string>
    <string name="card3PriceText">Price Per Serving:    $3.99</string>
    <string name="summaryTitleText">Order Summary</string>
    <string name="subtotalTitleText">Subtotal:</string>
    <string name="totalTitleText">Total:</string>
    <string name="submitBtnText">Submit Order</string>
    <string name="shoppingBtnText">Continue Shopping</string>
    <string name="addEntreeBtnText">Add Entree</string>
    <string name="addSideItemBtnText">Add Side Item</string>\
    <string name="addSweetTreatBtnText">Add Sweet Treat</string>
    <string name="cartBtnText">Go to cart</string>
    <string name="emailTitleText">Email:</string>
    <string name="questionTitleText">Questions or Concerns:</string>
    <string name="home_page">Home Page</string>
    <string name="Main_menu_title_text">Main Menu</string>
    <string name="entreeMenuBtnText">Entree Menu</string>
    <string name="sideMenuBtnText">Side Item Menu</string>
    <string name="sweetMenuBtnText">Sweet Treat Menu</string>
    <string name="homepagebtntext">Home Page</string>

</resources>
