<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#64DD17"
        android:orientation="vertical">

        <TextView
            android:id="@+id/menuTitle3"
            android:layout_width="match_parent"
            android:layout_height="86dp"
            android:ems="10"
            android:gravity="center"
            android:inputType="textPersonName"
            android:text="@string/sweetText"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textColor="@color/colorMenu"
            android:textStyle="bold" />

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20sp"
            android:layout_marginTop="25sp"
            android:layout_marginRight="20sp">

            <include
                layout="@layout/card16"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="20dp"
                android:paddingRight="20dp" />

            <Button
                android:id="@+id/addSweetTreatBtn1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center_horizontal"
                android:layout_marginBottom="10dp"
                android:background="#64DD17"
                android:gravity="center"
                android:onClick="onClickSweet1"
                android:text="@string/addSweetTreatBtnText"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:textColor="@color/colorMenu" />
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20sp"
            android:layout_marginTop="25sp"
            android:layout_marginRight="20sp">

            <include
                layout="@layout/card17"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="20dp"
                android:paddingRight="20dp" />

            <Button
                android:id="@+id/addSweetTreatBtn2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center_horizontal"
                android:layout_marginBottom="10dp"
                android:background="#64DD17"
                android:gravity="center"
                android:onClick="onClickSweet2"
                android:text="@string/addSweetTreatBtnText"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:textColor="@color/colorMenu" />
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20sp"
            android:layout_marginTop="25sp"
            android:layout_marginRight="20sp">

            <include
                layout="@layout/card18"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="20dp"
                android:paddingRight="20dp" />

            <Button
                android:id="@+id/addSweetTreatBtn3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center_horizontal"
                android:layout_marginBottom="10dp"
                android:background="#64DD17"
                android:gravity="center"
                android:onClick="onClickSweet3"
                android:text="@string/addSweetTreatBtnText"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:textColor="@color/colorMenu" />
        </android.support.v7.widget.CardView>

        <Button
            android:id="@+id/cartBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:layout_marginTop="20dp"
            android:background="@color/colorContact"
            android:onClick="onClickCartBtn"
            android:text="@string/cartBtnText"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textColor="@color/colorMenu" />

        <Button
            android:id="@+id/homePageBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:layout_marginTop="20dp"
            android:background="@color/colorContact"
            android:onClick="onClickHomeBtn"
            android:text="Main Menu"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textColor="@color/colorMenu" />

    </LinearLayout>
</ScrollView>